--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -6,17 +7,21 @@
 
   <meta name="title" content="Vicky W. | UX designer | About">
   <title>Vicky W. | UX designer | About</title>
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/about">
   <meta name="author" content="Vicky W.">
+
+  <!-- Basic Metadata -->
 
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
+  <!-- Open Graph / Facebook -->
+
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer" />
+  <meta property='og:title' content="Vicky W. | UX Designer" />
   <meta property='og:description'
     content='Hi! Thanks for stopping by. I am a UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
   <meta property='og:url' content="https://vickywang.me/" />
@@ -120,6 +125,7 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
 
 </head>
+
 <body>
   <!--progressBarScroll-->
   <div class="progressContainer">
@@ -532,31 +538,31 @@
   </button>
   <!--back to top-->
 </body>
-  <!--footer-->
-  <footer class="GreyBg100">
-    <div class="element">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub">
-          </a>
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram">
-          </a>
-        </div>
+<!--footer-->
+<footer class="GreyBg100">
+  <div class="element">
+    <div class="footer">
+      <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
+      <div class="footer-right">
+        <a href="mailto:vickyw.design@gmail.com">
+          <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+          <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
+        </a>
+        <a target="_blank" href="https://github.com/vicky-wyq">
+          <img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub">
+        </a>
+        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+          <img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen">
+        </a>
+        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+          <img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram">
+        </a>
       </div>
     </div>
-  </footer>
-  <!--footer-->
+  </div>
+</footer>
+<!--footer-->
 
 </html>
