--- a/architecture/index.html
+++ b/architecture/index.html
@@ -7,40 +7,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | UX Designer | Architecture Projects</title>
+  <meta name="title" content="Vicky W. | Architecture">
+  <title>Vicky W. | UX designer | Architecture</title>
+  <link rel="canonical" href="https://vickywang.me/architecture">
+  <meta name="author" content="Vicky W.">
+
+  <!-- Basic Metadata -->
+
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
-
-  <script type="application/ld+json">
-    {"@context":"https://schema.org",
-    "@graph":[{"@type":"WebSite","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me/",
-    "name":"Vicky Wang","description":"UX/UI Designer | Product Designer",
-    "potentialAction":[{"@type":"SearchAction",
-    "target":{"@type":"EntryPoint","urlTemplate":"https://vickywang.me/?s={search_term_string}"},
-    "query-input":"required name=search_term_string"}],"inLanguage":"en-US"},
-    {"@type":"CollectionPage","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me","name":"Vicky Wang | User Experience Designer | UX Design",
-    "isPartOf":{"@id":"https://vickywang.me/#website"},
-    "description":"Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)",
-    "breadcrumb":{"@id":"https://vickywang.me/#breadcrumb"},
-    "inLanguage":"en-US","potentialAction":[{"@type":"ReadAction",
-    "target":["https://vickywang.me/"]}]},{"@type":"BreadcrumbList","@id":"https://vickywang.me/#breadcrumb",
-    "itemListElement":[{"@type":"ListItem","position":1,"name":"Home"}]}]} </script>
-
-  <meta name="description" content="Vicky Wang's portfolio website">
-  <link rel="canonical" href="https://vickywang.me/architecture/">
+    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+  <meta name="description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <!-- Open Graph / Facebook -->
 
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
+  <meta property='og:title' content="Vicky W. | UX Designer" />
   <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
-  <meta property='og:url' content="https://vickywang.me/architecture" />
-  <meta property="og:site_name" content="Vicky Wang's Website">
+    content='Hi! Thanks for stopping by. I am a UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
+  <meta property='og:url' content="https://vickywang.me/" />
+  <meta property="og:site_name" content="Vicky's Website">
 
 
+  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:image:type" content="image/jpeg">
+  <!-- linkedin -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@vickyw_design" />
+  <meta name="twitter:title" content="Vicky's Website" />
+  <meta name="twitter:description"
+    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta name="twitter:url" content="//vickywang.me/">
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <!-- twitter -->
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
@@ -120,32 +122,35 @@
     </div>
   </div>
   <!--progressBarScroll-->
-  <!-- header -->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
+  <header>
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW"
+            title="vickywang.me"></a>
+        <div class="navbar">
+          <ul class="nav-menu">
+            <li class="nav-item inactive greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
+            </li>
+            <li class="nav-item active marginZero"><a href="/architecture"
+                class="nav-link box font300-1080 ">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography"
+                class="nav-link box font300-1080">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </div>
+    </nav>
 
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
-          </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography"
-              class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
-          </li>
-        </ul>
-      </div>
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </div>
-  </nav>
-  <!-- header -->
+  </header>
+
   <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper">
