--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <title>Vicky W. | UX Designer | Projects</title>
+  <title>Vicky W. | UX Designer </title>
   <link rel="canonical" href="https://vickywang.me/">
   <meta name="author" content="Vicky W.">
   <meta name="keywords"
@@ -305,7 +305,7 @@
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
-        <h2 class="tArrow">Recent Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+        <h2 class="tArrow">Latest Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
       </div>
     </div>
     <!-- Arrow -->
@@ -366,6 +366,7 @@
           </div>
         </div>
       </div>
+
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
@@ -455,7 +456,7 @@
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
-        <h2 class="tArrow">Other project <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
+        <h2 class="tArrow">Previous Projects <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
       </div>
     </div>
     <!-- Arrow -->
