--- a/glorify/index.html
+++ b/glorify/index.html
@@ -382,7 +382,7 @@
           <div class="element">
             <a href="https://www.figma.com/file/NuYDNgtzm7MmkrsaYeFnws/Glorify-app---Captured-in-April-2023?type=design&node-id=0%3A1&mode=design&t=RcnazEcPFtZuONYo-1"
               class="textUnderline" target=”_blank”>
-              <h3>View the April 2023 Glorify app interface on Figma</h3>
+              <h3>View the April 2023 Glorify App Interface on Figma</h3>
             </a>
           </div>
         </div>
@@ -392,7 +392,13 @@
     <!-- Slideshow Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Group prayer helps foster a connection among its participants</h2>
+        <div class="element">
+          <h2 class="">Solution Overview - Group prayer helps foster a connection among its participants</h2>
+          <h3 class="">Group prayer helps foster a connection among its participants</h3>
+
+        </div>
+
+
       </div>
     </div>
     <!-- Slideshow Title -->
@@ -449,7 +455,7 @@
     <!-- Prototype Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Users can either create or join a group prayer experience</h2>
+        <h2 class="element">Solution - Users can either create or join a group prayer experience</h2>
       </div>
     </div>
     <!-- Prototype Title -->
@@ -533,7 +539,8 @@
     <!-- Prototype Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Enhancing the group prayer experience makes it more interactive</h2>
+        <h2 class="element">Solution: Enhancing the group prayer experience to foster engagement, share faith, and gain
+          spiritual support from others.</h2>
       </div>
     </div>
     <!-- Prototype Title -->
