--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Basic Metadata -->
+
   <meta name="title" content="Vicky W. | UX Designer | Navigation V2">
   <title>Vicky W. | UX Designer | Navigation </title>
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/navigation/V2/">
   <meta name="author" content="Vicky W.">
 
   <meta name="keywords"
@@ -16,29 +18,30 @@
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer" />
-  <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me" />
+  <meta property="og:title" content="Vicky W. | UX Designer | Navigation">
+  <meta property="og:description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
-  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="627">
-  <meta property="og:image:type" content="image/jpeg">
-  <!-- linkedin -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky's Website" />
-  <meta name="twitter:description"
-    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
-  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta name="twitter:url" content="//vickywang.me/">
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <!-- twitter -->
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/">
+  <meta property="twitter:title" content="Vicky W. | UX Designer | Navigation">
+  <meta property="twitter:description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
+  <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
@@ -49,7 +52,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -148,7 +153,8 @@
 
     <div class="backgroundColorNav ">
       <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconXS"
-        src="../../icon/arrow-back.svg" alt="Go back"><h5>BACK</h5> 
+          src="../../icon/arrow-back.svg" alt="Go back">
+        <h5>BACK</h5>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
