--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Basic Metadata -->
+
   <meta name="title" content="Vicky W. | UX Designer | Navigation V3">
-  <title>Vicky W. | UX Designer | Navigation </title>
-  <link rel="canonical" href="https://vickywang.me/">
+  <title>Vicky W. | UX Designer | Navigation V3 </title>
+  <link rel="canonical" href="https://vickywang.me/navigation/V3/">
   <meta name="author" content="Vicky W.">
 
   <meta name="keywords"
@@ -16,28 +18,32 @@
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer" />
-  <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me" />
+  <meta property="og:title" content="Vicky W. | UX Designer | Navigation">
+  <meta property="og:description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
-  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="627">
-  <meta property="og:image:type" content="image/jpeg">
-  <!-- linkedin -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky's Website" />
-  <meta name="twitter:description"
-    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
-  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta name="twitter:url" content="//vickywang.me/">
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <!-- twitter -->
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/">
+  <meta property="twitter:title" content="Vicky W. | UX Designer | Navigation">
+  <meta property="twitter:description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
+
+  <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
 
 
   <link rel="stylesheet" href="../../main.css">
