--- a/navigation/index.html
+++ b/navigation/index.html
@@ -1,19 +1,24 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
   <meta name="title" content="Vicky W. | UX Designer | Navigation">
   <title>Vicky W. | UX Designer | Navigation </title>
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/navigation/">
   <meta name="author" content="Vicky W.">
+
+    <!-- Basic Metadata -->
 
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
     content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
 
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky Wang | UX Designer" />
@@ -47,7 +52,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -180,7 +187,7 @@
                 <div>
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System |  Efficiently Bulid &#38; Maintain Components</h5>
+                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
