--- a/photography/index.html
+++ b/photography/index.html
@@ -1,44 +1,50 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | UX Designer | Photography</title>
+
+
+
+
+  <meta name="title" content="Vicky W. | UX designer | Photography">
+  <title>Vicky W. | UX designer | Photography</title>
+  <link rel="canonical" href="https://vickywang.me/photography">
+  <meta name="author" content="Vicky W.">
+
+  <!-- Basic Metadata -->
+
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
-
-  <script type="application/ld+json">
-    {"@context":"https://schema.org",
-    "@graph":[{"@type":"WebSite","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me/",
-    "name":"Vicky Wang","description":"UX/UI Designer | Product Designer",
-    "potentialAction":[{"@type":"SearchAction",
-    "target":{"@type":"EntryPoint","urlTemplate":"https://vickywang.me/?s={search_term_string}"},
-    "query-input":"required name=search_term_string"}],"inLanguage":"en-US"},
-    {"@type":"CollectionPage","@id":"https://vickywang.me/#website",
-    "url":"https://vickywang.me","name":"Vicky Wang | User Experience Designer | UX Design",
-    "isPartOf":{"@id":"https://vickywang.me/#website"},
-    "description":"Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)",
-    "breadcrumb":{"@id":"https://vickywang.me/#breadcrumb"},
-    "inLanguage":"en-US","potentialAction":[{"@type":"ReadAction",
-    "target":["https://vickywang.me/"]}]},{"@type":"BreadcrumbList","@id":"https://vickywang.me/#breadcrumb",
-    "itemListElement":[{"@type":"ListItem","position":1,"name":"Home"}]}]} </script>
-
-  <meta name="description" content="Vicky Wang's portfolio website">
-  <link rel="canonical" href="https://vickywang.me/photography/">
+    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+  <meta name="description"
+    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+  <!-- Open Graph / Facebook -->
 
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
+  <meta property='og:title' content="Vicky W. | UX Designer" />
   <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
-  <meta property='og:url' content="https://vickywang.me/photography" />
-  <meta property="og:site_name" content="Vicky Wang's Website">
+    content='Hi! Thanks for stopping by. I am a UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
+  <meta property='og:url' content="https://vickywang.me/" />
+  <meta property="og:site_name" content="Vicky's Website">
 
 
-
+  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:image:type" content="image/jpeg">
+  <!-- linkedin -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@vickyw_design" />
+  <meta name="twitter:title" content="Vicky's Website" />
+  <meta name="twitter:description"
+    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta name="twitter:url" content="//vickywang.me/">
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <!-- twitter -->
 
 
 
@@ -47,7 +53,9 @@
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts_ScrollTrigger.js"></script>
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
