--- a/about/index.html
+++ b/about/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Basic Metadata -->
 
   <meta name="title" content="Vicky W. | UX designer | About">
   <title>Vicky W. | UX designer | About</title>
   <link rel="canonical" href="https://vickywang.me/about">
   <meta name="author" content="Vicky W.">
 
-  <!-- Basic Metadata -->
 
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
-    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.">
 
   <!-- Open Graph / Facebook -->
 
