--- a/design_system/index.html
+++ b/design_system/index.html
@@ -6,27 +6,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Basic Metadata -->
   <title>Vicky W. | UX Designer | Design System </title>
+  <link rel="canonical" href="https://vickywang.me/design_system/">
+  <meta name="author" content="Vicky W.">
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
+    content="Vicky Wang, UX Design, User Experience Design, User Interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+  <meta name="description"
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
 
-
-
-  <meta name="description" content="Vicky Wang's portfolio website">
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
-  <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
-  <meta property='og:url' content="https://vickywang.me/" />
-  <meta property="og:site_name" content="Vicky Wang's Project">
+  <meta property="og:title" content="Vicky W. | UX Designer | Projects">
+  <meta property="og:description"
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
+  <meta property="og:url" content="https://vickywang.me/">
+  <meta property="og:site_name" content="Vicky's Website">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://vickywang.me/">
+  <meta property="twitter:title" content="Vicky W. | UX Designer | Projects">
+  <meta property="twitter:description"
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-  <link rel="manifest" href="../site.webmanifest">
   <!-- favicon -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
