--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -16,14 +16,16 @@
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
-    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Vicky W. | UX Designer | Navigation">
   <meta property="og:description"
-    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
@@ -33,7 +35,8 @@
   <meta property="twitter:url" content="https://vickywang.me/">
   <meta property="twitter:title" content="Vicky W. | UX Designer | Navigation">
   <meta property="twitter:description"
-    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
   <!-- favicon -->
