--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -21,7 +21,8 @@
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
   <meta name="description"
-    content="Vicky's personal website showcasing her UX portfolio, photography, and creative projects. Explore her unique perspective on design, technology, and life through engaging content and stunning visuals.">
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
@@ -30,7 +31,7 @@
   <meta property='og:description'
     content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
   <meta property='og:url' content="https://vickywang.me" />
-  <meta property="og:site_name" content="Vicky's Website LACAMA">
+  <meta property="og:site_name" content="Vicky's Website">
 
   <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:width" content="1200">
