--- a/glorify/index.html
+++ b/glorify/index.html
@@ -6,20 +6,45 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+  <meta name="title" content="Vicky W. | UX Designer | GLORIFY">
   <title>Vicky W. | UX Designer | GLORIFY </title>
+  <link rel="canonical" href="https://vickywang.me/glorify/">
+  <meta name="author" content="Vicky W.">
+  <!-- Basic Metadata -->
+
+
+
   <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
+    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
+  <meta name="description"
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+">
 
-
-
-  <meta name="description" content="Vicky Wang's portfolio website">
+  <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
-  <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
-  <meta property='og:url' content="https://vickywang.me/" />
-  <meta property="og:site_name" content="Vicky Wang's Project">
+  <meta property='og:title' content="Vicky Wang | UX Designer | GLORIFY" />
+  <meta property='og:description'
+    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
+  <meta property='og:url' content="https://vickywang.me" />
+  <meta property="og:site_name" content="Vicky's Website">
+
+  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:image:type" content="image/jpeg">
+  <!-- linkedin -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@vickyw_design" />
+  <meta name="twitter:title" content="Vicky's Website" />
+  <meta name="twitter:description"
+    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail/Glorify.jpg" />
+  <meta name="twitter:url" content="//vickywang.me/">
+  <meta name="twitter:creator" content="VICKY WANG" />
+  <!-- twitter -->
+
 
 
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
