--- a/glorify/index.html
+++ b/glorify/index.html
@@ -38,8 +38,8 @@
   <meta name="twitter:site" content="@vickyw_design" />
   <meta name="twitter:title" content="Vicky's Website" />
   <meta name="twitter:description"
-    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
-  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail/Glorify.jpg" />
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
   <!-- twitter -->
@@ -1084,7 +1084,7 @@
                   <div class="blankHXS"></div>
 
                 </div>
-                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More</button>
+                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More &#8744;</button>
               </div>
             </div>
           </div>
@@ -1179,7 +1179,7 @@
                   <div class="blankHXS"></div>
 
                 </div>
-                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More</button>
+                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More &#8744;</button>
               </div>
             </div>
           </div>
@@ -1268,11 +1268,11 @@
                   <div class="blankHXS"></div>
                 </div>
 
-                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More</button>
+                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More &#8744;</button>
               </div>
             </div>
           </div>
-  
+
 
 
 
