--- a/seer/index.html
+++ b/seer/index.html
@@ -22,7 +22,7 @@
     {"@type":"CollectionPage","@id":"https://vickywang.me/#website",
     "url":"https://vickywang.me","name":"Vicky Wang | User Experience Designer | UX Design",
     "isPartOf":{"@id":"https://vickywang.me/#website"},
-    "description":"Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)",
+    "description":"Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio",
     "breadcrumb":{"@id":"https://vickywang.me/#breadcrumb"},
     "inLanguage":"en-US","potentialAction":[{"@type":"ReadAction",
     "target":["https://vickywang.me/"]}]},{"@type":"BreadcrumbList","@id":"https://vickywang.me/#breadcrumb",
