--- a/architecture/index.html
+++ b/architecture/index.html
@@ -25,7 +25,7 @@
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky W. | UX Designer" />
   <meta property='og:description'
-    content='Hi! Thanks for stopping by. I am a UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
+    content='Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio' />
   <meta property='og:url' content="https://vickywang.me/" />
   <meta property="og:site_name" content="Vicky's Website">
 
@@ -39,7 +39,7 @@
   <meta name="twitter:site" content="@vickyw_design" />
   <meta name="twitter:title" content="Vicky's Website" />
   <meta name="twitter:description"
-    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
   <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
