--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -41,7 +41,7 @@
   <meta name="twitter:site" content="@vickyw_design" />
   <meta name="twitter:title" content="Vicky's Website" />
   <meta name="twitter:description"
-    content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
+    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
   <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
