--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="element">
+                  <div class="element zTop">
                     <div class="element">
                       <h5>Password is required </h5>
                       <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES</strong></h3>
